fix align price-wrap blcok

--- a/src/blocks/btn/btn.scss
+++ b/src/blocks/btn/btn.scss
@@ -94,6 +94,19 @@ $border-radius:               3px !default;
     border: none;
     border-radius: 25px;
   }
+  
+  &--filters {
+    padding: 14px 24px;
+    color: $white;
+    background: var(--secondary-color);
+    font-family: $font-family--secondary;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 15px;
+    border: none;
+    border-radius: 25px;
+  }
 
   &--reset {
     display: flex;
