--- a/src/blocks/filters/filters.scss
+++ b/src/blocks/filters/filters.scss
@@ -90,7 +90,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        align-items: center;
+        align-items: baseline;
         gap: 5px;
     }
 
