--- a/src/blocks/mobile-filters/mobile-filters.scss
+++ b/src/blocks/mobile-filters/mobile-filters.scss
@@ -148,7 +148,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        align-items: center;
+        align-items: baseline;
         gap: 5px;
     }
 
